javascript 기능 추가

--- a/1.html
+++ b/1.html
@@ -10,11 +10,14 @@
 
   gtag('config', 'G-T978L5J2M5');
 </script>
+<script src="dark_mode.js"></script>
         <title>web1 - html</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <span class='dark_mode_checkbox'>dark_mode</span>
+        <input type="checkbox" onchange="dark_mode(this)">
         <h1 style="color: red;">ㅇㅇ</h1>
         <ol>
             <li class="class_selector1"><a href="https://www.w3.org/TR/2011/WD-html5-20110405/">html</a></li>
