--- a/1.html
+++ b/1.html
@@ -10,6 +10,7 @@
 
   gtag('config', 'G-T978L5J2M5');
 </script>
+<script src="https;//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="dark_mode.js"></script>
         <title>web1 - html</title>
         <meta charset="utf-8">
